# twitter-trends-amsterdam

./: README.md  create_local_pypi.sh  pyproject.toml  release.sh  zip_lambdas.sh
infrastructure/: cf-template.yaml  deployment-bucket.yaml
local_pypi_zip/: install-trends.sh
src/trending_topics/: __main__.py
src/trending_topics/api/: lambda.py
src/trending_topics/trends/: lambda.py  trends.py
src/trending_topics/twitter/: lambda.py
tests/: test_trends.py
