[tool.poetry]
name = "twitter-trends"
version = "0.1.0"
description = "Reporting trending topics from Twitter dataset"
authors = ["Gerben van der Huizen"]
packages = [{ include = "trending_topics", from="src" }]

[tool.poetry.dependencies]
python = "3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
jupyter = "^1.0.0"

[tool.poetry.extras]
spark = ["pyspark>=3.1.1,<3.2.0", "numpy==^1.20.2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
