[tool.poetry]
name = "twitter-trends"
version = "0.1.0"
description = "Reporting trending topics from Twitter dataset"
authors = ["Gerben van der Huizen"]
packages = [{ include = "trending_topics", from="src" }]

[tool.poetry.dependencies]
python = "3.7"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pyproject-flake8 ="^"
isort ="^5.10.0"
black="22.3"

[tool.poetry.extras]
spark = ["pyspark>=3.1.1,<3.2.0", "numpy==^1.20.2"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.flake8]
max-line-length = 180
extend-exclude = ["deploy", ".venv"]
extend-ignore = "E203"

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
